improved media queries to fully address horizontal overflow caused by classing/nesting issues in resources, faqs and suzukiMethod

--- a/src/styling/benefitsCarousel.style.css
+++ b/src/styling/benefitsCarousel.style.css
@@ -17,6 +17,7 @@
 .carousel {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .carousel-item {
@@ -38,4 +39,9 @@
 
 .benefitText {
   color: #f6f7ec;
+}
+
+@media (max-width: 768px) {
+  .benefitText {
+  }
 }
