--- a/src/styling/faqs.style.css
+++ b/src/styling/faqs.style.css
@@ -1,23 +1,29 @@
-.faq-section {
+.faqSection {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  gap: 20px;
+  justify-content: center;
   flex-wrap: wrap;
-  background-image: url("../../public/assets/sheetMusic.png");
+  background-image: url("/assets/sheetMusic.png");
   background-position: center;
   background-repeat: no-repeat;
   background-color: #022b3a;
   color: #f6f7ec;
   transition: transform 0.2s ease-in-out, color 0.2s ease-in-out;
+  min-height: 65vh;
 }
 
-.faq-title {
-  padding-top: 5%;
-}
-
-.faq-question:hover {
+.faqQuestion:hover {
   cursor: pointer;
   transform: scale(1.1);
+}
+
+@media (max-width: 900px) {
+  .faqQuestion {
+    font-size: 20px;
+  }
+  .faqSection {
+    margin: 0;
+    padding: 0;
+  }
 }
