--- a/src/styling/footer.style.css
+++ b/src/styling/footer.style.css
@@ -42,3 +42,11 @@
 .copyright a {
   text-decoration: none;
 }
+
+@media (max-width: 768px) {
+  .contactDetails {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+}
